fix checked ZERO from storage